--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -475,7 +475,7 @@
         <li>You can use PREZERA absolutely for free!</br></li>
         <li>You don't need to register, if you use only one laptop.</br></li>
         <li>Keep your data safe in the cloud!</br></li>
-        <li>You're allowed to upload up to <b>3</b> slides and <b>10mb</b> and you can also buy a custom name for your slide only for 99c!</br></li>
+        <li>You're allowed to upload up to <b>3</b> presentations and <b>10mb</b> of space and <b>5</b> users/viewers<br></li>
           <% if (userRole > 0) { %>
           <!--input type="button" value="Downgrade to Basic" class="btn btn-default"/ onclick="location='/downgrade.html?plan=0'"-->
           <% } %>
@@ -534,7 +534,8 @@
             <% } %>
         </div>
         </li>
-        <li>The same as our Basic plan + you can get your own domain on PREZERA, example: john.prezera.com<br></li>
+        <li>You can get your own domain on PREZERA, example: john.prezera.com<br></li>
+        <li>You're allowed to upload to unlimited presentations up to <b>100mb</b> of space and <b>10</b> users/viewers <br></li>
         <li>Plus you would able to get custom names for your presentation for free! Example: john.prezera.com/MyPresentation<br></li>
         <li>$4.99/year</li>
       </ul>
@@ -612,7 +613,10 @@
             <% } %>
           </div>
           </li>
-          <li>The same as our Silver plan + unlimited presentations + 100mb of space<br></li>
+
+          <li>You can get your own domain on PREZERA, example: john.prezera.com<br></li>
+          <li>You're allowed to upload to unlimited presentations up to <b>500mb</b> of space and <b>15</b> users/viewers</br></li>
+          <li>Plus you would able to get custom names for your presentation<br></li>
           <li>$9.99/year<br></li>
         </ul>
       </div>
@@ -621,15 +625,17 @@
 
     <div class="listUpgrade col-md-12 col-sm-12 col-xs-12">
       <div class="col-md-3 col-sm-3 col-xs-3">
-        <div class="payment-plan platinum"><p id="plan-text">Platinum</p> <!-- <p id="price">Call me</p> -->
+        <div class="payment-plan platinum"><p id="plan-text">Enterprise</p> <!-- <p id="price">Call me</p> -->
         </div>
       </div>
       <div class="col-md-9 col-sm-9 col-xs-9">
         <ul class="upgrade_text">
-          <li id="small-screen-price"class="platinum"><p id="plan-text">Platinum</p>
+          <li id="small-screen-price"class="platinum"><p id="plan-text">Enterprise</p>
           </li>
           <li>Get your own, private server!<br></li>
-          <li>Ask us about the price: <a href="mailto:contactus@prezera.com" id="mail-price-page">contactus@prezera.com</a><br></li>
+          <li>Recording<br></li>
+          <li>Up to 500 users<br></li>
+          <li>Ask us <a href="mailto:contactus@prezera.com" id="mail-price-page">contactus@prezera.com</a><br></li>
         </ul>
       </div>
     </div>
