--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -135,7 +135,7 @@
 					<span class="btn-group" id="buttonGroup">
             <input type="button" id="pres_login_button" style="font-size:18px;" value="Open presentation" class="btn btn-default">
 					</span>
-					<center id="Howtoget"><a href="javascript:showView('getKey');">How to get a presentation ID &amp; password?</a></center>
+				<!--	<center id="Howtoget"><a href="javascript:showView('getKey');">How to get a presentation ID &amp; password?</a></center> -->
 				</form>
       </div>
   </div>
