--- a/AWS_Website/www_static/chat.html
+++ b/AWS_Website/www_static/chat.html
@@ -49,7 +49,8 @@
 
 
   <script src="js/jquery-2.1.3.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>  
+  <script src="/socket.io/socket.io.js"></script>
   <script src="js/chat.js"></script>
+  <script src="/A1/js/frames.js"></script>
 </body>
 </html>
