--- a/AWS_Website/www_static/app/remote/index.html
+++ b/AWS_Website/www_static/app/remote/index.html
@@ -135,7 +135,7 @@
 					<span class="btn-group" id="buttonGroup">
             <input type="button" id="pres_login_button" style="font-size:18px;" value="Open presentation" class="btn btn-default">
 					</span>
-				<!--	<center id="Howtoget"><a href="javascript:showView('getKey');">How to get a presentation ID &amp; password?</a></center> -->
+					<center id="Howtoget"><a href="javascript:showView('getKey');">How to get a presentation ID &amp; password?</a></center>
 				</form>
       </div>
   </div>
@@ -143,11 +143,11 @@
     </section>
 
 <row style="max-height-page">
-	<section id="getKey" class="login mainbackground allData col-xs-12">
-        <div class="col-xs-12 remoteTitleHowtoGet">PRE<span style='color:red'>Z</span>ERA</div>
-        <div class="simplePageHowtoGet">
+	<section id="getKey" class="login mainbackground allData col-xs-12 col-md-12">
+        <div class="col-xs-12 col-md-12 remoteTitleHowtoGet">PRE<span style='color:red'>Z</span>ERA</div>
+        <div class="simplePageHowtoGet col-xs-12 col-md-12">
           <h3 class ="Howtoget">How to get a presentation ID & password?</h3>
-		      <ul id="howToGetPresentationId">
+		      <ul id="howToGetPresentationId col-xs-12 col-md-12">
 			      <li>Open your presentation in a web browser <a href="/#myPres" id="menuMyPres">(My Presentations)</a></li>
 			      <li>Open main menu and click 'Get presenter password'<br><img src="./img/getkey.png" alt="get key" id="img_get_key";></li>
 			      <li>After that the system will show you your presentation access credentials</li>
