--- a/AWS_Website/www_static/embed-sample/index.html
+++ b/AWS_Website/www_static/embed-sample/index.html
@@ -18,7 +18,7 @@ d) buttonValue: Upload button text
 var p = new Prezera({
   visualElement: "prezera-div",
   style: "prezera-style",
-  styleUrl: "//www.prezera.com/embed/style.css",
+  styleUrl: "//www.prezera.com/embed-sample/style.css",
   buttonText: "Upload"
 });
 </script>
