Video height fix

--- a/AWS_Website/www_static/A1/webrtc/opentok/video-client.html
+++ b/AWS_Website/www_static/A1/webrtc/opentok/video-client.html
@@ -6,7 +6,7 @@
   #subscribersDiv > div {
     border: 1px solid black;
     width: 88%    !important;
-    height: 150px   !important;
+    height: 90%   !important;
   }
   </style>
   </head>
