--- a/AWS_Website/www_static/A1/webrtc/opentok/video-pres.html
+++ b/AWS_Website/www_static/A1/webrtc/opentok/video-pres.html
@@ -5,7 +5,7 @@
     .myPublisherDiv {
       border: 1px solid blue !important;
       width: 88%    !important;
-      height: 150px   !important;
+      height: 80%   !important;
     }
 
     #subscribersDiv > div {
