--- a/AWS_Website/www_static/A1/webrtc/opentok/video-pres.html
+++ b/AWS_Website/www_static/A1/webrtc/opentok/video-pres.html
@@ -6,6 +6,7 @@
       border: 1px solid blue !important;
       width: 88%    !important;
       height: 80%   !important;
+      max-height: 150px;
     }
 
     #subscribersDiv > div {
