text chat and gold letters main page switch on blue

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -731,7 +731,7 @@
                     <div class="col-xs-offset-2 col-xs-4 contact ">
                         <h4><strong>Business inquiries</strong></h4>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:partners@prezera.com">partners@prezera.com</a>
+                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a style="color:mediumblue" href="mailto:partners@prezera.com">partners@prezera.com</a>
                             </li>
                         </ul>
                     </div>
@@ -740,7 +740,7 @@
 
                         <h4><strong>Press</strong></h4>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:press@prezera.com">press@prezera.com</a>
+                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a style="color:mediumblue" href="mailto:press@prezera.com">press@prezera.com</a>
                             </li>
                         </ul>
                     </div>
@@ -749,10 +749,10 @@
                     <br>
                     <ul class="list-inline">
                         <li>
-                            <a href="https://twitter.com/prezera"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                            <a style="color:mediumblue" href="https://twitter.com/prezera"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/prezera"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                            <a style="color:mediumblue" href="https://www.facebook.com/prezera"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
                         </li>
                         <!--<li>
                             <a href="#"><i class="fa fa-linkedin fa-fw fa-3x"></i></a>
@@ -764,7 +764,7 @@
                             <a href="#"><i class="fa fa-github fa-fw fa-3x"></i></a>
                         </li>
                         <li>-->
-                            <a href="mailto:info@prezera.com"><i class="fa fa-envelope fa-fw fa-3x"></i></a>
+                            <a style="color:mediumblue" href="mailto:info@prezera.com"><i class="fa fa-envelope fa-fw fa-3x"></i></a>
                         </li>
                     </ul>
                     <hr class="small">
