Fixed extra > on main page

--- a/AWS_Website/www_static/index.html
+++ b/AWS_Website/www_static/index.html
@@ -137,7 +137,7 @@
               <div id="uploadFalse"  class="uploadfile">
                   <button type="button" class="btn uploadButton" onclick="$('.myPres').click()">Limit reached.<br/>Click here to delete.</button>
               </div>
-              <<input class="btn startMeetingButton" onclick="location.href='m/'" type="button" value="Start FREE meeting">
+              <input class="btn startMeetingButton" onclick="location.href='m/'" type="button" value="Start FREE meeting">
 
             <% } else if (noUploadForUser == 2) {%>
 
